# MTC

./: .\print_log.txt  .\undef_Ts.txt  .gitignore  AC_hufftable.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  DC_hufftalbe.txt  MTC.creator.user.2.7pre1  MTC.files  MTC.includes  Makefile  Readme.md  build.sh  clean.sh  cmake_install.cmake  encoder_configure.cfg  mahalanobis.txt  mahalanobis2.txt
data/: Makefile  baboon.pgm  cmake_install.cmake
modules/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
modules/DeepLearning/: LogisticRegression.py  logistic_sgd.py
modules/Lighting/: CMakeLists.txt
modules/Lighting/include/: Lighting.h  LightingVerify.h  PoissonSolver.h  ThinPlateSpline.h
modules/Lighting/src/: Lighting.cpp  LightingVerify.cpp  PoissonSolver.cpp  ThinPlateSpline.cpp
modules/MTC/: CMakeLists.txt
modules/MTC/include/: CoderDef.h  ConsoleColor.h  HuffTree.h  JpegAddon.h  MTC.h  NTest.h  Statistics.h
modules/MTC/src/: HuffTree.cpp  MTC.cpp  Statistics.cpp
modules/Metric/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake
modules/Metric/include/: .Steerable.h.swo  .algorithms.h.swp  Array.h  FComplex.h  FilterBank.h  Granulate.h  IO.h  LRI.h  Metric.h  MetricData.h  Steerable.h  Steerable2.h  algorithms.h  fftw++.h  output.h
modules/Metric/src/: .Steerable.cpp.swp  .algorithms.cpp.swp  Granulate.cpp  IO.cpp  LRI.cpp  Metric.cpp  Steerable.cpp  Steerable2.cpp  algorithms.cpp  output.cpp
modules/Runner/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake
modules/Runner/include/: Tester.h
modules/Runner/src/: .main.cpp.swp  .testTensor.cpp.swn  .testTensor.cpp.swo  .testTensor.cpp.swp  PQICodingLF.cpp  Tester.cpp  computeFeatures.cpp  gpussim.cpp  main.cpp  mtcmain.cpp  studyMetric.cpp  testPythonCall.cpp  testPythonCall.py  testTensor.cpp  tpss.cpp  trainGranularity.cpp  trainMetric.cpp
modules/Site/: manage.py
modules/Site/GranulateStudy/: forms.py  models.py  views.py
modules/Site/GranulateStudy/migrations/: 0001_initial.py
modules/Site/GranulateStudy/templates/GranulateStudy/: show_images.html  test_begin2.html  test_finish.html
modules/Site/Matching/: forms.py  models.py  views.py
modules/Site/Matching/Templates/: matching.html  show_image.html
modules/Site/Matching/templates/Matching/: base_other.html  matching.html  result.html  show_image.html
modules/Site/Matching/templatetags/: extra_tags.py
modules/Site/SubCoding/: ajax.py  models.py  views.py
modules/Site/SubCoding/templates/SubCoding/: Coding.html  test_begin1.html
modules/Site/SubTest/: forms.py  models.py  views.py
modules/Site/SubTest/Templates/: base.html  display_images.html  output.html  test_begin1.html
modules/Site/SubTest/migrations/: 0002_auto__chg_field_subtestresult_score.py  0003_auto__add_field_subtestresult_imagetype.py
modules/Site/SubTest/templates/: show_image.html  threadtest.html
modules/Site/SubTest/templates/SubTest/: output.html  test_finish.html
modules/Site/TPCSite/: settings.py  urls.py  wsgi.py
modules/TensorLib/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
modules/TensorLib/include/: .CommonDef.h.swo  .CommonDef.h.swp  .Cube.h.swp  .Tensor.h.swn  .Tensor.h.swp  CommonDef.h  Cube.h  CubePlus.h  Gaussian.h  Laplace.h  LinkQueue.h  PostBlendSet.h  QGrid.h  QNode.h  QTree.h  Size3.h  Size3.h~  SizePlugin.hpp  Steerable.h  Tensor.h  TensorHelper.h  TensorLite.h  TensorLite.old.h
modules/TensorLib/src/: .Steerable.cpp.swp  .Tensor.cpp.swo  .Tensor.cpp.swp  Cube.cpp  CubePlus.cpp  QGrid.cpp  QNode.cpp  QTree.cpp  Size3.cpp  Steerable.cpp  Tensor.cpp  TensorHelper.cpp  TensorLite.cpp
modules/Utility/: CMakeLists.txt  Makefile  cmake_install.cmake
modules/Utility/include/: MyLib.h  MyLib.h~
modules/Utility/src/: MyLib.cpp
